# ftm-benchmark

./: .gitignore  ATTRIBUTION.md  CITATION.cff  NOTICE  README.md  pyproject.toml
checkpoints/expB_pub_haiku/: ARM-0.turns.jsonl  ARM-1.turns.jsonl  ARM-2a.gatelog.jsonl  ARM-2a.turns.jsonl  ARM-2b.gatelog.jsonl  ARM-2b.turns.jsonl
docs/: SESSION_STATE.md
experiments/expB/: gen_transcripts.py  report_haiku.json  report_haiku.md
ftm/: __init__.py  a2a.py  adapters.py  cli.py  engine.py  observation.py  runner.py  scenario_gen.py
ftm/bridges/: hermes.py
ftm/expb/: __init__.py  adapters.py  analysis.py  arm1_policy.py  cli.py  driver.py  gates.py  mapping.py
ftm/expb2/: __init__.py  build_pack.py  drift.py  driver.py  gates5.py  pressure.py  prompts.py  r2_policy.py  resolver.py  rules.py
ftm/grounding/: __init__.py  santander.py
ftm/grounding/data/: sgcd_subset.jsonl
ftm_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scenarios/packs/expb2_banking_v0/: cases.json  manifest.json  pressure.json
scenarios/packs/ftm_banking_v0/: ATTRIBUTION.md  manifest.json  scenarios.jsonl
tests/: fakes.py  test_a2a_adapter.py  test_agent_framing.py  test_expb.py  test_expb2.py  test_grounding.py  test_hermes_adapter.py  test_resumption.py  test_scenario_gen.py
